<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".ui.notifications.NotificationsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenn"
            android:layout_width="115dp"
            android:layout_height="122dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/man"
            app:civ_border_color="#fff"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagenn"
            android:layout_marginStart="15dp"
            android:layout_marginTop="4dp"
            android:text="@string/thilana_madushan"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="240dp"
            android:text="@string/_0"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="220dp"
            android:text="@string/posts"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="144dp"
            android:text="@string/_1"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="110dp"
            android:text="@string/followers"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="47dp"
            android:text="@string/_3"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="20dp"
            android:text="@string/following"
            android:textColor="#000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/edit"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/line"
            android:text="@string/edit_profile" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:layout_marginTop="240dp"
            android:id="@+id/tablayout"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="300dp"
            android:id="@+id/viewPager"/>
    </RelativeLayout>
</ScrollView>