<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="74dp"
        android:text="@string/Profile_new"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="31dp"
        android:text="@string/when_you_share_photoes_and_videos_they_ll_appear_on_your_profile"
        android:textColor="#B4B4B4"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="-26dp"
        android:text="@string/share_your_first_photo_or_video"
        android:textColor="#0000ff"
        android:textSize="12sp" />
</RelativeLayout>